--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "8.1.2",
     "@angular/router": "8.1.2",
     "@ng-bootstrap/ng-bootstrap": "4.1.0",
+    "apollo-angular": "^1.6.0",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.24.0",
     "ng2-nouislider": "1.7.13",
@@ -28,7 +29,13 @@
     "popper.js": "1.14.7",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.4.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "apollo-angular-link-http": "^1.6.0",
+    "apollo-link": "^1.2.11",
+    "apollo-client": "^2.6.0",
+    "apollo-cache-inmemory": "^1.3.2",
+    "graphql-tag": "^2.10.0",
+    "graphql": "^14.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.2",
